tests/transpiler/x/ocaml/group_by_conditional_sum.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/group_by_conditional_sum.ml", line 4, characters 38-40:
4 |   let items = [[("cat", "a"); ("val", 10); ("flag", true)]; [("cat", "a"); ("val", 5); ("flag", false)]; [("cat", "b"); ("val", 20); ("flag", true)]] in
                                          ^^
Error: This expression has type int but an expression was expected of type
         string
